--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ downloads/
 eggs/
 .eggs/
 lib/
+lib64
 lib64/
 parts/
 sdist/
@@ -122,6 +123,7 @@ celerybeat.pid
 # Environments
 .env
 .venv
+.my.cnf
 env/
 venv/
 ENV/
