deixa o readme melhor

--- a/MYSQL/Dockerfile
+++ b/MYSQL/Dockerfile
@@ -1,5 +1,5 @@
 FROM mysql:latest
 
 
-ENV MYSQL_ROOT_PASSWORD ${MYSQL_ROOT_PASSWORD}
+ENV MYSQL_ROOT_PASSWORD 1234
 COPY ./data.sql /docker-entrypoint-initdb.d/data.sql
