--- a/exemplo.env
+++ b/exemplo.env
@@ -1,7 +1,7 @@
-SECRET_KEY=$(python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())")
+SECRET_KEY=544879876541213158674679dghmghmgmhdghmdgmhdggmdghm
 DEBUG=true
 NAME=cadastro
 USER=root
 PASSWORD=1234
 HOST=localhost
-PORT=3309
+PORT=3307
